// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionsListItem /> when isSelected=false renders as expected 1`] = `
<div
  className="y-suggestions-list-item y-hc-select-on-hover y-hc-suppress-text-background"
  onMouseDown={[Function]}
>
  <MediaObject
    imageContent={
      <Avatar
        borderType="round"
        imageShouldFadeIn={false}
        imageUrl="imageUrl"
        name="John Smith"
        size="small"
      />
    }
    metadataContent="Software Engineer"
    size="small"
    titleContent={
      Array [
        <span
          className="y-suggestions-list-item--match-highlight"
        >
          Joh
        </span>,
        <span>
          n Smith
        </span>,
      ]
    }
  />
</div>
`;

exports[`<SuggestionsListItem /> when isSelected=true renders as expected 1`] = `
<div
  className="y-suggestions-list-item y-hc-select-on-hover y-hc-suppress-text-background y-suggestions-list-item--selected y-hc-selected"
  onMouseDown={[Function]}
>
  <MediaObject
    imageContent={
      <Avatar
        borderType="round"
        imageShouldFadeIn={false}
        imageUrl="imageUrl"
        name="John Smith"
        size="small"
      />
    }
    metadataContent="Software Engineer"
    size="small"
    titleContent={
      Array [
        <span
          className="y-suggestions-list-item--match-highlight"
        >
          Joh
        </span>,
        <span>
          n Smith
        </span>,
      ]
    }
  />
</div>
`;
